<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7DFFFF"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="253dp"
        android:layout_height="135dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/info_komentarz"
            android:layout_width="400dp"

            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:text="@string/komentarz_pojemnik"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <ImageView
            android:id="@+id/logo_robac"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/robac_logo4" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusPojemnikListView">

        <EditText
            android:id="@+id/komentarz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="@android:dimen/notification_large_icon_height"

            android:ems="10"
            android:hint="Wpisz komentarz"
            android:minHeight="48dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_anuluj"

                android:layout_width="144dp"
                android:layout_height="48dp"
                android:background="@drawable/rounded_button"
                android:text="@string/info_anuluj"
                android:textColor="@color/colorButton"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_ok"

                android:layout_width="144dp"
                android:layout_height="48dp"
                android:background="@drawable/rounded_button"
                android:text="@string/info_ok"
                android:textColor="@color/colorButton2"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statusPojemnikListView"
        android:layout_width="308dp"
        android:layout_height="211dp"
        android:layout_marginTop="100dp"
        android:tooltipText="@string/komentarz_pojemnik"
        app:barrierMargin="?attr/dialogPreferredPadding"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.82" />


</androidx.constraintlayout.widget.ConstraintLayout>
